# OPENCLAW

./: .env.example  .gitignore  AUDIT-REPORT.md  CHEATSHEET.md  DREAMS.md  INTROSPECTION-REPORT.md  LICENSE  README.md  ROUNDTABLE-PULSE.md  ROUNDTABLE.md  pyproject.toml
api/: server.py
archive/: README.md  lmstudio-proxy.mjs  mem0_memory_filter.py
artifacts/: autonomy-daemon.heartbeat.json  autonomy-daemon.state.json  heartbeat-status-2026-04-23-2343.md
cli/: openclaw.py
daemon/: com.openclaw.api.plist  com.openclaw.scheduler.plist  com.openclaw.watchdog.plist  watchdog.py
data/: lighthouse-report.jsonl  uptime.json
docker/: docker-compose.yml
docs/: AGENTS.md  ARCHITECTURE.md  DEMO.md  HOOKS.md  INAUGURAL-MISSION.md  MEMORY.md  OPERATOR_APPROVAL_RUNBOOK.md  OPERATOR_RUNBOOK.md  ORCHESTRATION.md  ROADMAP.md  RUNBOOK.md  VERIFICATION-REPORT.md  automation-tools.md  memory-and-sandboxing.md
memory/: 2026-04-26.md
projects/: n8n-heartbeat-workflow.json  n8n-memory-consolidation-workflow.json
revenue/: DASHBOARD.md  MEMORY.md  revenue_tracker.py
scripts/: actually-bad-business-websites 2.py  agent-protocol.py  autonomy.sh  autonomy_daemon.py  batch-smtp-send.py  crm.py  email_ledger 2.py  email_ledger.py  escalation-check.py  event-logger.py  find-real-local-businesses 2.py  gmail-oauth-send 2.py  gmail-send.py  gmail-smtp-send 2.py  gmail-smtp-send.py  import-email-claims 2.py  import-email-claims.py  import-n8n-workflows.py  import-notes.py  install-comfyui.sh  install-tools.py  lighthouse-audit.py  lighthouse-monitor.sh  lighthouse-server.py  (+23 more)
(+2009 files in other folders)
