[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw"
version = "0.3.0"
description = "OPENCLAW Autonomous Multi-Agent System CLI"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.scripts]
openclaw = "cli.openclaw:app"

[tool.setuptools.packages.find]
include = ["cli*", "api*", "system*", "revenue*", "tools*", "daemon*"]
